Add main navigation, notification sync on resume; document toolchain
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>